feat: option to remove additional parameters from token response